--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -10,7 +10,10 @@
     {
       "src": "/(.*)",
       "dest": "/",
-      "methods": ["GET", "HEAD", "PUT", "PATCH", "POST", "DELETE"]
+      "methods": ["GET", "PUT", "PATCH", "POST", "DELETE", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ]
 }
